Corrects the overflow of the tips box

--- a/client/app/styles/buildingDisplay.scss
+++ b/client/app/styles/buildingDisplay.scss
@@ -1,6 +1,23 @@
 #toggles {
-  max-width: 100px;
-  margin-top: 15px;
-  width: 100px;
-  margin-left: 15px;
+  max-width: 10%;
+  margin-top: 8%;
+  margin-left: 5%;
+  //padding-right: 2%;
+  padding-bottom: 1%;
+  max-height: 20%;
+  display: inline;
+
+  :hover {
+    cursor: pointer;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+  }
 }
+
+#graph {
+  max-width: 100%;
+  margin-left: 5%;
+  margin-bottom: 2%;
+}
+
+
